<?xml version="1.0"?>
<package format="2">
  <name>arm_gazebo_msgs</name>
  <version>0.0.0</version>
  <description>messages</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author>Peter Mitrano</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
