<package format="2">
    <name>arm_gazebo_plugins</name>
    <version>0.0.0</version>
    <description>gazebo plugins</description>
    <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>arc_utilities</depend>
    <depend>arm_gazebo_msgs</depend>
    <depend>cnpy</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_msgs</depend>
    <depend>sdf_tools</depend>
    <depend>sensor_msgs</depend>
</package>
